# tabscli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/future/: cross-browser-and-sync.md  developer-workflows.md  piping-and-composability.md  tab-intelligence.md  workflow-automation.md
docs/present/: architecture.md  commands.md  design-decisions.md  storage.md
src/: cli.rs  config.rs  main.rs
src/chrome/: applescript.rs  cdp.rs  mod.rs  types.rs
src/commands/: close.rs  history.rs  list.rs  mod.rs  organize.rs  restore.rs  save.rs  select.rs  sessions.rs  setup.rs  snapshot.rs
src/model/: mod.rs  session.rs  tab.rs
src/output/: formatter.rs  mod.rs
src/store/: filesystem.rs
src/tui/: picker.rs
